--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <a href="/" class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
           </a>
-          <p class="text-body-secondary">© 2023</p>
+          <p class="text-body-secondary">© 2023 <br> made with ❤️ by <a href="#">Chayan</a></p>
         </div>
     
         <div class="col mb-3">
